MOBI-489 showcase updates - jsf popup - pass through viewSize var, set popup autoCenter=false left 40% to avoid overlapping the menu section
git-svn-id: http://anonsvn.icesoft.org/repo/icemobile/trunk/icemobile@32573 1de00972-ac04-4911-a46b-06793c8d78d9

--- a/samples/mobileshowcase/src/main/webapp/resources/css/showcase.css
+++ b/samples/mobileshowcase/src/main/webapp/resources/css/showcase.css
@@ -223,7 +223,6 @@ html.honeycomb h3{
     padding: 0 1%;
     font-weight:normal;
 }
-html.android .form, html.honeycomb .form{ height: 100%; }
 .form .mobi-fieldset{
     text-align:center;
     clear:both;
@@ -257,7 +256,7 @@ html.android .form, html.honeycomb .form{ height: 100%; }
     box-sizing: content-box;
 }
 .form label{
-    width:100px;
+    width:105px;
     text-align:left;
     -webkit-box-flex: 1;
     -moz-box-flex: 1;
@@ -278,6 +277,7 @@ html.android .form, html.honeycomb .form{ height: 100%; }
     overflow: hidden;
     display: block!important;
     float: none!important;
+    /*width:60%;*/
 }
 .form .mobi-fieldset-row > span.mobi-thumb, .form .mobi-fieldset-row > span.mobi-thumb-done{
     display: inline-block!important;
@@ -287,7 +287,7 @@ html.android .form, html.honeycomb .form{ height: 100%; }
     width:100%;
  }
 .form .mobi-fieldset > .mobi-fieldset-row > .mobi-button{
-    -moz-box-sizing: border-box;
+    -moz-box-sizing: border-box; 
     -wekit-box-sizing: border-box;
     box-sizing: border-box;
     overflow: hidden;
@@ -300,7 +300,6 @@ html.android .form, html.honeycomb .form{ height: 100%; }
     clear:both;
     padding-top:10px;
 }
-
 /* LARGE SCREEN */
 @media screen and (min-width: 580px) {  
     input.submit, button.submit{
